--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -16,7 +16,7 @@
             function replaceTag(tag) {return tagsToReplace[tag] || tag;}
             function safeTagsReplace(str) {return str.replace(/[&<>]/g, replaceTag);}
 
-            const channel = "chat";
+            const channel = "chat:index";
 
             function getParam(name, url) {
                 if (!url) url = window.location.href;
