--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -160,9 +160,9 @@
                 $('#form').submit(function(event) {
                     event.preventDefault();
                     sub.publish({"input": input.val()}).then(function() {
-                        // console.log('message accepted by server');
+                        drawText("Successfully published to channel");
                     }, function(err) {
-                        // console.log('error publishing message', err);
+                        drawText("Publish error: " + JSON.stringify(err));
                     });
                     input.val('');
                 });
