--- a/_examples/jwt_token/index.html
+++ b/_examples/jwt_token/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title></title>
@@ -7,25 +7,29 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
         <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.min.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
-            var tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
+            const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
             function replaceTag(tag) {return tagsToReplace[tag] || tag;}
             function safeTagsReplace(str) {return str.replace(/[&<>]/g, replaceTag);}
 
-            var channel = "chat:index";
+            const channel = "chat";
 
-            $(function() {
+            $(function () {
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
 
-                var input = $("#input");
-                var container = $('#messages');
+                fetch('http://localhost:8000/token').then((response) => {
+                    return response.json();
+                }).then((data) => {
+                    centrifuge.setToken(data['token']);
+                    centrifuge.connect();
+                });
 
-                var centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
-
-                centrifuge.setConnectData({"user-agent": navigator.userAgent});
+                const input = $("#input");
+                const container = $('#messages');
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
@@ -33,52 +37,21 @@
                     input.attr("disabled", false);
                 });
 
-                centrifuge.on('message', function(data) {
-                    drawText(JSON.stringify(data));
-                    // echo data back to server.
-                    centrifuge.send(data);
-                });
-
                 centrifuge.on('disconnect', function(ctx){
                     drawText('Disconnected: ' + ctx.reason + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
                     input.attr("disabled", true);
                 });
 
-                // show how many users currently in channel.
-                function showPresence(sub) {
-                    sub.presence().then(function(result) {
-                        var count = 0;
-                        for (var key in result.presence){
-                            count++;
-                        }
-                        drawText('Now in this room: ' + count + ' clients');
-                    }, function(err) {
-                        drawText("Presence error: " + JSON.stringify(err));
-                    });
-                }
-
                 // subscribe on channel and bind various event listeners. Actual
                 // subscription request will be firer after client will connect to
                 // Centrifugo and will be authorized.
                 var sub = centrifuge.subscribe(channel, handleMessage)
-                        .on("join", handleJoin)
-                        .on("leave", handleLeave)
                         .on("unsubscribe", handleUnsubscribe)
                         .on("subscribe", handleSubscribe)
                         .on("error", handleSubscribeError);
 
-                showPresence(sub);
-
-                // Trigger actual connection establishing with Centrifugo server.
-                // At this moment actual client work starts - i.e. subscriptions
-                // defined start subscribing etc.
-                centrifuge.connect();
-
                 function handleSubscribe(ctx) {
                     drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
-                    if (ctx.isResubscribe) {
-                        showPresence(sub);
-                    }
                 }
 
                 function handleSubscribeError(err) {
@@ -86,23 +59,15 @@
                 }
 
                 function handleMessage(message) {
-                    var clientID;
+                    let clientID;
                     if (message.info){
                         clientID = message.info.client;
                     } else {
                         clientID = null;
                     }
-                    var inputText = message.data["input"].toString();
-                    var text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
+                    const inputText = message.data["input"].toString();
+                    const text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
                     drawText(text);
-                }
-
-                function handleJoin(message) {
-                    drawText('Client joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
-                }
-
-                function handleLeave(message) {
-                    drawText('Client left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
                 }
 
                 function handleUnsubscribe(sub) {
@@ -127,7 +92,7 @@
     </head>
     <body>
         <form id="form">
-            <input type="text" id="input" autocomplete="off" />
+            <label for="input"></label><input type="text" id="input" autocomplete="off" />
             <input type="submit" id="submit" value="»">
         </form>
         <ul id="messages"></ul>
