replace legacy mentions of Centrifugo throughout lib

--- a/_examples/custom_broker/index.html
+++ b/_examples/custom_broker/index.html
@@ -49,9 +49,6 @@
                     });
                 }
 
-                // subscribe on channel and bind various event listeners. Actual
-                // subscription request will be firer after client will connect to
-                // Centrifugo and will be authorized.
                 var sub = centrifuge.subscribe(channel, handleMessage)
                         .on("join", handleJoin)
                         .on("leave", handleLeave)
@@ -61,7 +58,7 @@
 
                 showPresence(sub);
 
-                // Trigger actual connection establishing with Centrifugo server.
+                // Trigger actual connection establishing with a server.
                 // At this moment actual client work starts - i.e. subscriptions
                 // defined start subscribing etc.
                 centrifuge.connect();
