--- a/_examples/gin_auth/chat.html
+++ b/_examples/gin_auth/chat.html
@@ -76,16 +76,18 @@
             }
 
             // subscribe on channel and bind various event listeners. Actual
-            // subscription request will be firer after client will connect to
-            // Centrifugo and will be authorized.
+            // subscription request will be sent after client connects to
+            // a server.
             var sub = centrifuge.subscribe(channel, handleMessage)
                 .on("join", handleJoin)
                 .on("leave", handleLeave)
                 .on("unsubscribe", handleUnsubscribe)
                 .on("subscribe", handleSubscribe)
                 .on("error", handleSubscribeError);
+
             showPresence(sub);
-            // Trigger actual connection establishing with Centrifugo server.
+
+            // Trigger actual connection establishing with a server.
             // At this moment actual client work starts - i.e. subscriptions
             // defined start subscribing etc.
             centrifuge.connect();
