--- a/_examples/redis_engine/index.html
+++ b/_examples/redis_engine/index.html
@@ -50,8 +50,8 @@
                 }
 
                 // subscribe on channel and bind various event listeners. Actual
-                // subscription request will be firer after client will connect to
-                // Centrifugo and will be authorized.
+                // subscription request will be sent after client connects to
+                // a server.
                 const sub = centrifuge.subscribe(channel, handleMessage)
                         .on("join", handleJoin)
                         .on("leave", handleLeave)
@@ -61,7 +61,7 @@
 
                 showPresence(sub);
 
-                // Trigger actual connection establishing with Centrifugo server.
+                // Trigger actual connection establishing with a server.
                 // At this moment actual client work starts - i.e. subscriptions
                 // defined start subscribing etc.
                 centrifuge.connect();
