revert example changes

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -138,7 +138,7 @@
                     }
                     const inputText = message.data["input"].toString();
                     const text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
-                    // drawText(text);
+                    drawText(text);
                 }
 
                 function handleJoin(message) {
