--- a/_examples/history_iteration/index.html
+++ b/_examples/history_iteration/index.html
@@ -18,16 +18,6 @@
             const channel = "chat:index";
             let since = null;
 
-            function getParam(name, url) {
-                if (!url) url = window.location.href;
-                name = name.replace(/[\[\]]/g, '\\$&');
-                const regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-                    results = regex.exec(url);
-                if (!results) return null;
-                if (!results[2]) return '';
-                return decodeURIComponent(results[2].replace(/\+/g, ' '));
-            }
-
             $(function () {
                 const input = $("#input");
                 const container = $('#messages');
@@ -36,7 +26,6 @@
                     minRetry: 5000
                 });
 
-                // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
                     input.attr("disabled", false);
@@ -47,17 +36,11 @@
                     input.attr("disabled", true);
                 });
 
-                // subscribe on channel and bind various event listeners. Actual
-                // subscription request will be sent after client connects to
-                // a server.
-                var sub = centrifuge.subscribe(channel, handleMessage)
+                const sub = centrifuge.subscribe(channel, handleMessage)
                         .on("unsubscribe", handleUnsubscribe)
                         .on("subscribe", handleSubscribe)
                         .on("error", handleSubscribeError);
-
-                // Trigger actual connection establishing with a server.
-                // At this moment actual client work starts - i.e. subscriptions
-                // defined start subscribing etc.
+                
                 centrifuge.connect();
 
                 async function restoreMissedPublications(ctx) {
@@ -124,7 +107,7 @@
                 }
 
                 function handleUnsubscribe(sub) {
-                    // drawText('Unsubscribed from channel ' + sub.channel);
+                    drawText('Unsubscribed from channel ' + sub.channel);
                 }
 
                 function drawText(text) {
